SS/toy-compiler-2-masirith/parser.output
Grammar

    0 $accept: program $end

    1 program: statement_list

    2 statement_list: ε
    3               | statement statement_list

    4 statement: expression ';'

    5 expression: NUMBER OPERATOR NUMBER


Terminals, with rules where they appear

    $end (0) 0
    ';' (59) 4
    error (256)
    NUMBER <intval> (258) 5
    OPERATOR <charval> (259) 5


Nonterminals, with rules where they appear

    $accept (6)
        on left: 0
    program <statement_list> (7)
        on left: 1
        on right: 0
    statement_list <statement_list> (8)
        on left: 2 3
        on right: 1 3
    statement <statement> (9)
        on left: 4
        on right: 3
    expression <expression> (10)
        on left: 5
        on right: 4


State 0

    0 $accept: • program $end

    NUMBER  shift, and go to state 1

    $default  reduce using rule 2 (statement_list)

    program         go to state 2
    statement_list  go to state 3
    statement       go to state 4
    expression      go to state 5


State 1

    5 expression: NUMBER • OPERATOR NUMBER

    OPERATOR  shift, and go to state 6


State 2

    0 $accept: program • $end

    $end  shift, and go to state 7


State 3

    1 program: statement_list •

    $default  reduce using rule 1 (program)


State 4

    3 statement_list: statement • statement_list

    NUMBER  shift, and go to state 1

    $default  reduce using rule 2 (statement_list)

    statement_list  go to state 8
    statement       go to state 4
    expression      go to state 5


State 5

    4 statement: expression • ';'

    ';'  shift, and go to state 9


State 6

    5 expression: NUMBER OPERATOR • NUMBER

    NUMBER  shift, and go to state 10


State 7

    0 $accept: program $end •

    $default  accept


State 8

    3 statement_list: statement statement_list •

    $default  reduce using rule 3 (statement_list)


State 9

    4 statement: expression ';' •

    $default  reduce using rule 4 (statement)


State 10

    5 expression: NUMBER OPERATOR NUMBER •

    $default  reduce using rule 5 (expression)
